examples/test/testpolicy7928.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7928
  namespace: namespace263
spec:
  podSelector:
    matchLabels:
      key9: value19
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key33: value15
      podSelector:
        matchLabels:
          key23: value6
          key44: value35
          key15: value38
